
- mysqlnd
  . Fixed bug #55609 (mysqlnd cannot be built shared). (Johannes)
  . Fixed bug #55067 (MySQL doesn't support compression - wrong config option).
    (Andrey)

- Oracle Database extension (OCI8):
  . Increased maxium Oracle error message buffer length for new 11.2.0.3 size 
    (Chris Jones)

- PDO
  . Fixed bug #55776 (PDORow to session bug). (Johannes)

- PDO MySQL driver:
  . Fixed bug #55870 (PDO ignores all SSL parameters when used with mysql 
    native driver) (Pierre)
  . Fixed bug #54158 (MYSQLND+PDO MySQL requires #define 
    MYSQL_OPT_LOCAL_INFILE) (Andrey)

- PDO OCI driver:
  . Fixed bug #55768 (PDO_OCI can't resume Oracle session after it's been killed)
  (mikhail dot v dot gavrilov at gmail dot com, Chris Jones, Tony)

- Phar:
  . Fixed bug #52013 (Unable to decompress files in a compressed phar). (Hannes)
  . Fixed bug #53872 (internal corruption of phar). (Hannes)

- PHP-FPM SAPI:
  . Fixed bug #55526 (Heartbeat causes a lot of unnecessary events). (fat)
  . Fixed bug #55533 (The -d parameter doesn't work). (fat)
  . Implemented FR #52569 (Add the "ondemand" process-manager
    to allow zero children). (fat)
  . Fixed bug #55486 (status show BIG processes number). (fat)
  . Fixed bug #55577 (status.html does not install). (fat)
  . Backported from 5.4 branch (Dropped restriction of not setting the same
    value multiple times, the last one holds).
    (giovanni at giacobbi dot net, fat)
  . Backported FR #55166 from 5.4 branch (Added process.max to control
    the number of process FPM can fork). (fat)
  . Backported FR #55181 from 5.4 branch (Enhance security by limiting access
    to user defined extensions). (fat)
  . Backported FR #54098 from 5.4 branch (Lowered process manager
    default value). (fat)
  . Backported FR #52052 from 5.4 branch (Added partial syslog support). (fat)
  . Implemented FR #54577 (Enhanced status page with full status and details
    about each processes. Also provide a web page (status.html) for